# billirae

./: .env.example  .env.local  FINAL_REPORT.md  IMPLEMENTATION_SUMMARY.md  README.md  package-lock.json  package.json  vercel.json
.github/workflows/: ci-cd.yml
.next/: trace
.next/server/: _error.js
backend/: requirements.txt  setup.py  test_email_imports.py  test_email_mock.py  test_email_service.py  test_imports.py  test_imports_fixed.py  test_pdf_email.py  test_pdf_generation.py  test_pdf_mock.py
backend/billirae_backend/: .env  .env.example  pyproject.toml  setup.py
backend/billirae_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
backend/billirae_backend/app/: main.py
backend/billirae_backend/app/api/: __init__.py  auth.py  gdpr.py  invoices.py  profile.py  users.py  voice.py
backend/billirae_backend/app/core/: config.py  security.py
backend/billirae_backend/app/db/: mongodb.py
backend/billirae_backend/app/db/models/: client.py  invoice.py  user.py
backend/billirae_backend/app/services/: email_service.py  gpt_service.py  pdf_service.py
backend/billirae_backend/billirae_backend.egg-info/: PKG-INFO  SOURCES.txt
billirae-frontend/: .env  .gitignore  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  tsconfig.json  tsconfig.playwright.json  vercel.json  vite.config.ts
billirae-frontend/playwright-report/: index.html
billirae-frontend/src/: App.tsx  main.tsx  test_invoice_preview.tsx
pages/: dashboard.tsx  index.tsx  login.tsx
supabase/: .env  config.toml
(+63 files in other folders)
